--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "start": "vite preview"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.4",
@@ -12,5 +12,10 @@
     "prettier": "^2.4.1",
     "tailwindcss": "^2.2.15",
     "vite": "^2.5.4"
+  },
+  "dependencies": {
+    "alpinejs": "^3.3.4",
+    "htm": "^3.1.0",
+    "vhtml": "^2.2.0"
   }
 }
