--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "vite preview"
+    "start": "vite preview",
+    "preview": "yarn build && yarn start"
   },
   "dependencies": {
     "alpinejs": "^3.3.4",
