--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "scribe",
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,6 +8,7 @@
     "preview": "yarn build && yarn start"
   },
   "dependencies": {
+    "@alpinejs/persist": "^3.3.5",
     "alpinejs": "^3.3.4",
     "htm": "^3.1.0",
     "twind": "^0.16.16",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "prettier": "^2.4.1",
+    "tailwindcss": "^2.2.15",
     "vite": "^2.5.4"
   }
 }
