--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@alpinejs/persist": "^3.3.5",
     "@ryangjchandler/fern": "^0.1.0",
-    "alpinejs": "^3.3.4",
+    "alpinejs": "3.3.3",
     "htm": "^3.1.0",
     "twind": "^0.16.16",
     "vhtml": "^2.2.0"
