--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@alpinejs/persist": "^3.3.5",
     "@ryangjchandler/fern": "^0.1.0",
     "alpinejs": "3.3.3",
+    "highlight.js": "^11.2.0",
     "htm": "^3.1.0",
     "twind": "^0.16.16",
     "vhtml": "^2.2.0"
