--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "alpinejs": "3.3.3",
     "highlight.js": "^11.2.0",
     "htm": "^3.1.0",
+    "quill": "^1.3.7",
     "twind": "^0.16.16",
     "vhtml": "^2.2.0"
   },
