--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vhtml": "^2.2.0"
   },
   "devDependencies": {
+    "postcss": "^8.3.8",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-visualizer": "^5.5.2",
