--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "highlight.js": "^11.2.0",
     "htm": "^3.1.0",
     "quill": "^1.3.7",
+    "quill-delta": "^4.2.2",
     "quill-delta-to-html": "^0.12.0",
     "twind": "^0.16.16",
     "vhtml": "^2.2.0"
